k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knox
  labels:
    app.kubernetes.io/managed-by: kubectl
    app.kubernetes.io/part-of: knox-platform
